# ProVe

./: .gitattributes  .gitignore  APIresult.csv  APIresult.db  Batch_tester.py  LICENSE  LLM_ProVe_main_process.py  LLM_inference_management.py  LLM_translation.py  ProVe_heuristic_service.py  ProVe_main_process.py  ProVe_main_service.py  Prove_lite.py  Prove_llm.py  README.md  SimpleUI.py  SimpleUI_lite.py  UI_tester.py  Wikidata_Text_Parser.py  background_processing.py  claim_entailment.py  common_utils.py  config-test.yaml  config.yaml  dashboard.py  database_manager.py  db_manager.py  eventHandler.py  functions.py  html_fetching.py  info.py  item_ranker.py  llm_load copy.py  properties_to_remove.json  pyproject.toml  reference_checking.py  refs_html_collection.py  refs_html_to_evidences.py  requirements.txt  swagger.json  (+8 more)
CodeArchive/: Prove_lite(1st).py
LLMs/: LLM_ProVe_main_process.py  LLM_ProVe_main_service.py  LLM_inference_manager.py  LLM_refs_html_to_evidences.py  LLM_translation.py
api/: app.py  custom_decorators.py  queue_manager.py  utils.py  utils_api.py  wsgi.py
api/db/: website.py
api/docs/: process_reference.yml
api/hackathon/: api_code.py
front/: common.js
scripts/: dr_backup.sh  historical_backup.sh  restart.sh
utils/: auth.py  bert_model.py  callbacks.py  finetune.py  lightning_base.py  logger.py  mongo_handler.py  objects.py  pagepileList.txt  queue_manager.py  sentence_retrieval_model.py  sentence_retrieval_module.py  textual_entailment_module.py  utils_verbalisation_module.py  verbalisation_module.py  wikidata_utils.py
(+17 files in other folders)
